--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "WebGPU implementation of the earth rendering",
   "main": "index.js",
   "scripts": {
-  "start": "concurrently \"cd frontend && npm start\" \"cd backend && npm start\"",
-  "build": "concurrently \"cd frontend && npm run build\" \"cd backend && npm run build\""
+    "start": "concurrently \"cd frontend && npm start\" \"cd backend && npm start\"",
+    "build": "concurrently \"cd frontend && npm run build\" \"cd backend && npm run build\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "@webgpu/types": "^0.1.44",
+    "concurrently": "^8.2.2",
+    "rollup-plugin-string-import": "^1.2.4"
   }
 }
