--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@webgpu/types": "^0.1.44",
     "concurrently": "^8.2.2",
     "rollup-plugin-string-import": "^1.2.4"
+  },
+  "dependencies": {
+    "wgpu-matrix": "^3.1.0"
   }
 }
