Added context manager as well as video textures

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "rollup-plugin-url": "^3.0.1"
   },
   "dependencies": {
+    "hls.js": "^1.5.14-0.canary.10621",
     "wgpu-matrix": "^3.1.0"
   }
 }
