Render an elevation map using a plane geometry for that

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "rollup.config.js",
   "scripts": {
-    "start": "rollup -c -w",
+    "start": "rollup -c -w --no-cache",
     "build": "rollup -c"
   },
   "keywords": [],
