--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rollup/plugin-url": "^8.0.2",
     "@webgpu/types": "^0.1.44",
     "concurrently": "^8.2.2",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-string-import": "^1.2.4",
     "rollup-plugin-url": "^3.0.1"
   },
