--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@rollup/plugin-url": "^8.0.2",
+    "@types/dat.gui": "^0.7.13",
     "@webgpu/types": "^0.1.44",
     "concurrently": "^8.2.2",
     "rollup-plugin-copy": "^3.5.0",
@@ -19,8 +20,10 @@
     "rollup-plugin-url": "^3.0.1"
   },
   "dependencies": {
+    "dat.gui": "^0.7.9",
     "geotiff": "^2.1.3",
     "hls.js": "^1.5.14-0.canary.10629",
+    "rollup-plugin-postcss": "^4.0.2",
     "wgpu-matrix": "^3.1.0"
   }
 }
