--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,5 +18,9 @@
     "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "@types/dat.gui": "^0.7.13",
+    "dat.gui": "^0.7.9"
   }
 }
